[package]
name = "path_tracer"
version = "0.1.3"
keywords = ["graphics"]
categories = ["graphics"]
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "An offline path tracer."
edition = "2018"

[dependencies]
cglinalg = { git = "https://github.com/lambdaxymox/cglinalg" }
rand = "0.7.3"
